# allegro_shooting

./: .gitignore  CMakeLists.txt  main.c
include/: Bullet.h  Enemy.h  Game.h  GameObject.h  Input.h  List.h  Player.h  alternas_s.h  global.h  vector.h
src/: Bullet.c  Enemy.c  Game.c  GameObject.c  Player.c  global.c  vector.c
src/data/: List.c
src/input/: Input.c
